# cer

app/robots/CER01/: CER_ALL_fix_no_laser.xml  CER_ALL_new.xml
app/robots/CER01/hardware/MAIS/: left_hand-multi_enc.xml  right_hand-multi_enc.xml
app/robots/CER01/hardware/mechanicals/: cer_left_hand-mcp7-mec.xml  cer_left_lower_arm-mcp18-mec.xml  cer_left_upper_arm-ems17-mec.xml  cer_right_lower_arm-mcp20-mec.xml  cer_torso-ems15-mec.xml
app/robots/CER01/hardware/motorControl/: cer_safe-mc.xml
app/robots/CER01/wrappers/motorControl/: cer_head-mc_wrapper.xml  cer_left_arm-mc_wrapper.xml  cer_left_arm_no_hand-mc_wrapper.xml  cer_left_upper_arm-mc_wrapper.xml  cer_left_wrist-mc_wrapper.xml  cer_left_wrist_tripod-mc_wrapper.xml  cer_right_arm-mc_wrapper.xml  cer_right_arm_no_hand-mc_wrapper.xml  cer_right_upper_arm-mc_wrapper.xml  cer_right_wrist-mc_wrapper.xml  cer_right_wrist_tripod-mc_wrapper.xml  cer_ros_wrapper_new.xml  cer_torso-mc_wrapper.xml  cer_torso_tripod-mc_wrapper.xml
app/robots/CER02/hardware/rpLidar/: laserA2_hw_back.xml  laserA2_hw_front.xml
app/robots/CER02/wrappers/rpLidar/: laser_wrapper.xml
cermod/r1face_mic/: r1face_mic.cpp  r1face_mic.h
libraries/cer_kinematics/include/cer_kinematics/: utils.h
libraries/cer_kinematics_alt/RobotModelLib/include/: Geometry.h
libraries/cer_mobile_kinematics/: CMakeLists.txt
libraries/cer_mobile_kinematics/include/cer_mobile_kinematics/: mobile_arm_plan.h
libraries/cer_mobile_kinematics/src/: mobile_arm_plan.cpp
modules/mobile-reaching/: CMakeLists.txt
modules/mobile-reaching/collision-detection/: CMakeLists.txt  main.cpp
modules/mobile-reaching/manipulability-map/: CMakeLists.txt  main.cpp
modules/mobile-reaching/trajectory-controller/: CMakeLists.txt  main.cpp
modules/mobile-reaching/trajectory-planner/: CMakeLists.txt  main.cpp
(+2 files in other folders)
